--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^18.15.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-redux": "^7.1.25",
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,7 +19,7 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
-    "sass": "^1.56.2",
+    "sass": "^1.60.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
