--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-redux": "^7.1.23",
     "axios": "^0.26.1",
     "react": "^17.0.2",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
