--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "sass": "^1.50.0",
+    "styled-components": "^5.3.9",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
@@ -49,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.26"
   }
 }
