--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@types/react-dom": "^17.0.14",
     "@types/react-redux": "^7.1.23",
     "axios": "^0.26.1",
+    "primereact": "^9.2.3",
     "react": "^17.0.2",
-    "react-data-table-component": "^7.5.3",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
@@ -23,7 +23,6 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "sass": "^1.50.0",
-    "styled-components": "^5.3.9",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
