--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react-dom": "^17.0.14",
     "@types/react-redux": "^7.1.23",
     "axios": "^0.26.1",
+    "mobx": "^6.9.0",
+    "mobx-react-lite": "^3.4.3",
     "primereact": "^9.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
